--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -4,12 +4,10 @@
 <div class="login-dark">
     <form method="post">
         <h2 class="sr-only">Login Form</h2>
-        <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
+        <div class="illustration"><i class=" person-circle-outline"></i></div>
          <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
          <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-         <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Log In</button>
-         <div class="pt-4 text-center"><a href="{{ url_for('signup') }}" class="text-succes text-decoration-none">Create an Account?</a></div>
+         <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Create an Account</button>
      </form>
 </div>
 {% endblock %}
-
