--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 {% block title %}Login{% endblock %}
 {% block content %} 
 <div class="login-dark">
-    <form method="post">
+    <form method="POST", action="/login">
         <h2 class="sr-only">Login Form</h2>
         <div class="illustration"><i class="icon ion-ios-locked-outline"></i></div>
          <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
