--- a/templates/signUp.html
+++ b/templates/signUp.html
@@ -2,12 +2,13 @@
 {% block title %}Login{% endblock %}
 {% block content %} 
 <div class="login-dark">
-    <form method="post">
+    <form method="POST">
         <h2 class="sr-only">Login Form</h2>
         <div class="illustration"><i class=" person-circle-outline"></i></div>
+         <div class="form-group"><input class="form-control" type     ="email" name="text" placeholder="Username"></divi
          <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
          <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
-         <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Create an Account</button>
+         <div class="form-group"><button class="btn btn-primary btn-block" type="submit">Create Account</button>
      </form>
 </div>
 {% endblock %}
